--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "UN Movers",
-    "short_name": "UN Movers",
+    "name": "Unite Ndlela Transport Service",
+    "short_name": "Unite Ndlela",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#972678",
