--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "background_color": "#972678",
     "theme_color": "#972678",
-    "description": "Unite Ndlela Transport Services",
+    "description": "Unite Ndlela Transport Services (Pty) Ltd",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
